--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #============================================
 spring.mvc.hiddenmethod.filter.enabled=true
+logging.level.org.springframework.security=DEBUG
 
