--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,12 @@ spring.jpa.hibernate.ddl-auto=update
 #============================================
 spring.mvc.hiddenmethod.filter.enabled=true
 logging.level.org.springframework.security=DEBUG
+#================================================
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+spring.application.name=Bootstrap Spring Boot
+#===========================================
 
