Страница добавления юзера

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #============================================
 spring.mvc.hiddenmethod.filter.enabled=true
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 #================================================
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true 
